@@ -60,11 +60,12 @@ public class AffixData{
 	private static final Function<String, FlagParsingStrategy> FLAG_PARSING_STRATEGY
 		= Memoizer.memoize(ParsingStrategyFactory::createFromFlag);
 
-	private static final List<AffixOption> SINGLE_FLAG_TAGS = Arrays.asList(AffixOption.NO_SUGGEST_FLAG, AffixOption.COMPOUND_FLAG,
-		AffixOption.COMPOUND_BEGIN_FLAG, AffixOption.COMPOUND_MIDDLE_FLAG, AffixOption.COMPOUND_END_FLAG,
-		AffixOption.ONLY_IN_COMPOUND_FLAG, AffixOption.PERMIT_COMPOUND_FLAG, AffixOption.FORBID_COMPOUND_FLAG,
-		/*AffixOption.COMPOUND_ROOT,*/ AffixOption.FORCE_COMPOUND_UPPERCASE_FLAG, AffixOption.CIRCUMFIX_FLAG, AffixOption.FORBIDDEN_WORD_FLAG,
-		AffixOption.KEEP_CASE_FLAG, AffixOption.NEED_AFFIX_FLAG/*, AffixOption.SUB_STANDARD_FLAG*/);
+	/*, AffixOption.SUB_STANDARD_FLAG*/
+	private static final List<AffixOption> SINGLE_FLAG_TAGS = List.of(AffixOption.NO_SUGGEST_FLAG, AffixOption.COMPOUND_FLAG,
+		AffixOption.COMPOUND_BEGIN_FLAG, AffixOption.COMPOUND_MIDDLE_FLAG, AffixOption.COMPOUND_END_FLAG, AffixOption.ONLY_IN_COMPOUND_FLAG,
+		AffixOption.PERMIT_COMPOUND_FLAG, AffixOption.FORBID_COMPOUND_FLAG, /*AffixOption.COMPOUND_ROOT,*/
+		AffixOption.FORCE_COMPOUND_UPPERCASE_FLAG, AffixOption.CIRCUMFIX_FLAG, AffixOption.FORBIDDEN_WORD_FLAG, AffixOption.KEEP_CASE_FLAG,
+		AffixOption.NEED_AFFIX_FLAG);
 
 
 	private final Map<String, Object> data = new HashMap<>(0);
